--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 		{% assign size = posts | size %}
 		<section class="category">
 				<h3>
-					<a>{{ name | replace: "-", " " }}</a>
+					<a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ name | replace: "-", " " }}</a>
 				</h3>
 
 			<ul>
 				{% assign tutorials = posts | sort: "title" %}
-				{% for tutorial in tutorials %}
+				{% for tutorial in tutorials limit: 4 %}
 					<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
 				{% endfor %}
+				{% if size > 4 %}
+					<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ size | minus: 4 }} more...</a></li>
+				{% endif %}
 			</ul>
 		</section>
 	{% endfor %}
